--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,18 +1,30 @@
 <div *ngIf="user">
-  <h1>Account</h1>
+  <app-header title="Account"></app-header>
 
-<form [formGroup]="formControl" (ngSubmit)="onSubmit()">
-  <div class="modal-body">                                        
-      <app-input-wrapper [value]="formControl.controls['name']" label="Username" errorMsg="Please provide a valid username (3-25 characters).">
-          <input class="form-control" formControlName="name" type="text">
-      </app-input-wrapper>
-      <input class="form-control" formControlName="public" type="checkbox">
+  <div class="container">
+    <div class="card mb-4">
+      <div class="card-body px-md-5 py-md-5">
+
+        <form [formGroup]="formControl" (ngSubmit)="onSubmit()">                                     
+          <div class="form-group">
+            <app-input-wrapper [value]="formControl.controls['name']" label="Username" errorMsg="Please provide a valid username (3-25 characters).">
+              <input class="form-control" formControlName="name" type="text">
+            </app-input-wrapper>
+          </div>
+          
+          <label class="mt-3">
+            <input formControlName="public" type="checkbox" class="mr-2">Visibility in the search engine
+          </label>
+
+          <div class="mt-5">
+            <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
+              {{ isLoading ? 'loading...' : 'Save changes' }}
+            </button>
+            <button (click)="onDelete()" class="btn btn-link text-danger ml-3" type="button">Delete account</button>
+          </div>
+        </form>       
+
+      </div>
+    </div>
   </div>
-  <div class="modal-footer">
-      <button (click)="onDelete()" class="btn btn-danger" type="button">Delete account</button>
-      <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
-        {{ isLoading ? 'loading...' : 'Save changes' }}
-      </button>
-  </div>
-</form>
 </div>
