--- a/src/app/pages/team-edit/team-edit.component.html
+++ b/src/app/pages/team-edit/team-edit.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="team">
-    <app-members-list [team]="team" [allowAdminDelete]="allowAdminDelete"></app-members-list>
-    <app-team-edit-card [team]="team"></app-team-edit-card>
+<div *ngIf="team" class="container">
+  <app-members-list [team]="team" [allowAdminDelete]="allowAdminDelete"></app-members-list>
+  <app-team-edit-card [team]="team"></app-team-edit-card>
 </div>
