--- a/src/app/pages/team-edit/members-list/members-list.component.html
+++ b/src/app/pages/team-edit/members-list/members-list.component.html
@@ -1,36 +1,55 @@
-<div class="card">
-  <div class="card-header">
-    Members
-  </div>
-  <div class="card-body">
+<div class="card mb-4">
+  <div class="card-body px-md-5 py-md-5">
+    <h2 class="card-title mb-4">Members</h2>
+
     <form [formGroup]="formControl" (ngSubmit)="onAddMember()">
-      <input class="form-control" formControlName="email" name="email">
-      <p *ngIf="memberAddFormMsg">{{ memberAddFormMsg }}</p>
-      <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
-        {{ isLoading ? 'loading...' : 'Invite' }}
-      </button>
+      <div class="row">
+        <div class="col-12 col-sm-9 mb-3">
+          <input class="form-control" formControlName="email" name="email" placeholder="e-mail">
+        </div>
+        <div class="col-12 col-sm-3 mb-4">
+          <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary btn-block">
+            {{ isLoading ? 'loading...' : 'Send invite' }}
+          </button>
+        </div>
+      </div>
+      <div class="alert alert-light ng-star-inserted py-3 mb-3" *ngIf="memberAddFormMsg">{{ memberAddFormMsg }}</div>      
     </form>
 
-    <table style="width: 100%">
-      <tr *ngFor="let member of team.members" style="border-bottom: 1px solid #eee;">
-        <td style="width: 300px;">{{ member.user.username }}<br><small>{{ member.user.email }}</small></td>
-        <td style="width: 200px;">{{ member.is_member ? 'is member' : 'not member' }}</td>
+    <table class="table table-borderless table-hover table-responsive-md">
+      <tr *ngFor="let member of team.members">
+        <td class="rounded-left align-middle" style="width: 90px;">
+          <div class="scorable__member-photo"><img src="{{ member.user.photo }}" alt="photo"></div>
+        </td>
+        <td class="align-middle">{{ member.user.username }}<br><small class="text-muted">{{ member.user.email }}</small></td>
+        <td class="align-middle text-center" style="width: 60px;">
+          <i *ngIf="member.is_member && !member.is_admin" class="fas fa-user text-primary"></i>
+          <i *ngIf="!member.is_member && !member.is_admin" class="fas fa-user-slash text-gray-300"></i>
+          <i *ngIf="member.is_admin" class="fas fa-user-secret text-primary"></i>
+        </td>
     
-        <td style="width: 300px;">
+        <td class="align-middle text-right" style="width: 190px;">
           <div *ngIf="member.is_admin">
-            <span>is admin</span>
-            <button *ngIf="allowAdminDelete" (click)="onUpdateMember(member._id_member, member.id_team, 0, member.id_user)" class="btn btn-link" type="button">remove admin</button>
+            <!--<span>is admin</span>-->
+            <button *ngIf="allowAdminDelete" (click)="onUpdateMember(member._id_member, member.id_team, 0, member.id_user)" class="btn btn-link text-primary" type="button">
+              remove admin
+            </button>
           </div>
           <div *ngIf="!member.is_admin">
-            <span>is not admin</span>
-            <button *ngIf="member.is_member && !member.is_admin" (click)="onUpdateMember(member._id_member, member.id_team, 1, member.id_user)" class="btn btn-link" type="button">make admin</button>
+            <!--<span>is not admin</span>-->
+            <button *ngIf="member.is_member && !member.is_admin" (click)="onUpdateMember(member._id_member, member.id_team, 1, member.id_user)" class="btn btn-link text-primary" type="button">
+                make admin
+            </button>
           </div>
         </td>
     
-        <td style="width: 200px;">
-            <button *ngIf="!member.is_admin" (click)="onDeleteMember(member.id_user, member.id_team)" class="btn btn-link" type="button">remove member</button>
+        <td class="rounded-right align-middle text-right" style="width: 150px;">
+            <button *ngIf="!member.is_admin" (click)="onDeleteMember(member.id_user, member.id_team)" class="btn btn-link text-danger" type="button">
+              <i class="fas fa-times"></i>remove
+            </button>
         </td>
       </tr>
     </table>
+
   </div>
 </div>
