--- a/src/app/pages/team-games/type/type.component.html
+++ b/src/app/pages/team-games/type/type.component.html
@@ -1,10 +1,15 @@
 <form [formGroup]="formControl" (ngSubmit)="onSubmit()">
-  <div class="d-flex">
-      <input class="form-control" formControlName="type_a">
-      <input class="form-control" formControlName="type_b">
-  </div>
+  <div class="nu-type-edit">
+    <div class="input-group nu-type-edit__inputs">
+      <input class="form-control form-control nu-type-edit__input" formControlName="type_a">
+      <input class="form-control nu-type-edit__input" formControlName="type_b">
+    </div>
 
-  <button *ngIf="showSubmit && formControl.valid" [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
-    {{ isLoading ? 'loading...' : 'Save' }}
-  </button>
+    <div *ngIf="showSubmit && formControl.valid" class="nu-type-edit__button">
+      <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary btn-round btn-sm">
+        <i *ngIf="!isLoading" class="fas fa-check"></i>
+        <i *ngIf="isLoading" class="fas fa-spinner"></i>
+      </button>
+    </div>    
+  </div>
 </form>
