--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,32 +1,54 @@
-<div *ngIf="isLoadedUser">
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" routerLink="/app">BETON</a>
-      <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/app">Teams</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/app/account">Account</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" (click)="onLogout()">Logout</a>
-        </li>
-      </ul>
-      <div class="ml-auto text-white">
-        <app-user-menu></app-user-menu>
+<div class="nu-container" *ngIf="isLoadedUser">
+  
+  <!-- Navbar -->
+  <div class="container-fluid">
+    <div class="nu-navbar row align-items-center nu-inverse">
+
+      <!-- Logo -->
+      <div class="col col-md-auto">
+        <a routerLink="/app" class="logo">
+          <img src="assets/logo.svg" alt="beton">
+        </a>
       </div>
-    </nav>
+
+      <!-- Breadcrumps -->
+      <nav class="col d-none d-md-block ml-3">
+        <ol class="breadcrumb">
+          <li *ngFor="let crumb of breadcrumbs" class="breadcrumb-item" >
+            <a *ngIf="crumb.link" [routerLink]="[crumb.link]">Teams</a>
+            <span *ngIf="!crumb.link">{{ crumb.title }}</span>
+          </li>
+        </ol>
+      </nav>
+
+      <!-- User menu -->
+      <div class="col-auto">
+        <div class="row align-items-center">
+          <div class="col-auto">          
+            <app-notifications></app-notifications>
+          </div>
+          <div class="col">
+            <app-user-menu></app-user-menu>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  <div class="bg-warning mb-5 p-3">
-    Temp notifications:<br>
-    <app-notifications></app-notifications>
-  </div>
-  
-  <div *ngIf="isLoadedMembership" class="px-5">
+
+  <!-- Content -->
+  <div *ngIf="isLoadedMembership">
     <router-outlet></router-outlet>
   </div>
 
+  <!-- Footer -->
+  <div class="nu-footer">&copy; 2018 Beton</div>
+  
+  <!-- Alerts -->
   <app-alert></app-alert>
+
+</div>
+
+<div class="nu-layout">
+  <div class="nu-layout__navbar"></div>
+  <div class="nu-layout__header"></div>
 </div>
