--- a/src/app/pages/error404/error404.component.html
+++ b/src/app/pages/error404/error404.component.html
@@ -1,3 +1,13 @@
-<p>
-  error404 works!
-</p>
+<div class="container">
+  <div class="row align-content-center text-center" style="height: 100vh">
+
+    <div class="col-12">
+      <div class="display-1"><strong>404</strong></div>
+    </div>
+
+    <div class="col-12">
+      <a routerLink="/app">← back to app</a>
+    </div>
+
+  </div>
+</div>
