--- a/src/app/theme/_utils.scss
+++ b/src/app/theme/_utils.scss
@@ -16,8 +16,13 @@
   color: $gray-300;
 }
 
-.text-size-lg {
-  font-size: 40px;
+.text-size-lg {  
+  @include media-breakpoint-up(md) {
+    font-size: 40px;
+  }
+  @include media-breakpoint-down(sm) {
+    font-size: 24px;
+  }
 }
 
 // Inverse mode
