--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -36,3 +36,5 @@
 <a class="fixed-add" routerLink="/app/teams/add">
   <i class="fas fa-plus"></i>
 </a>
+
+<app-preloader *ngIf="isLoading"></app-preloader>
