--- a/src/app/theme/variables.scss
+++ b/src/app/theme/variables.scss
@@ -15,14 +15,14 @@ $black:    #000;
 
 
 $blue:    #10A8FF;
-$indigo:  #4F62FA;
+$indigo:  #5165f9;
 $purple:  #6f42c1;
 $pink:    #C54970;
 $red:     #dc3545;
 $orange:  #fd7e14;
 $yellow:  #ffc107;
 $green:   #1cbd42;
-$teal:    #5FFFE1;
+$teal:    #5fffe1;
 $cyan:    #17a2b8;
 
 $primary:       $indigo;
