--- a/src/app/theme/variables.scss
+++ b/src/app/theme/variables.scss
@@ -122,6 +122,9 @@ $alert-border-width: 0;
 $alert-bg-level: 0;
 $alert-color-level: 10;
 
+// Navs
+$nav-link-padding-x: 2rem;
+
 
 // --------------------------------------------------------------------------------- Beton
 
