--- a/src/app/pages/team-games-edit/team-games-edit.component.html
+++ b/src/app/pages/team-games-edit/team-games-edit.component.html
@@ -35,10 +35,10 @@
         </div>
         <div class="row bg-primary py-4 mt-4 justify-content-center nu-game-modal__score">
           <div class="col-auto">
-            <input class="form-control" type="text" formControlName="score_a" placeholder="A">
+            <input class="form-control" type="number" formControlName="score_a" placeholder="A">
           </div>
           <div class="col-auto">
-            <input class="form-control" type="text" formControlName="score_b" placeholder="B">
+            <input class="form-control" type="number" formControlName="score_b" placeholder="B">
           </div>
         </div>
         <div class="modal-body">
