--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,14 @@
 <div [ngClass]="{'container' : container}" [@inOut]>
   <div class="nu-header no-gutters row align-items-center align-content-center justify-content-center">
-    <div *ngIf="back" class="col-auto d-none d-md-block">
+    <div *ngIf="back" class="col-auto d-none d-lg-block">
       <a routerLink="/app" class="btn btn-link nu-inverse">
         <i class="fas fa-angle-left"></i>
       </a>
     </div>
-    <div class="col text-center text-md-left">
+    <div class="col text-center text-lg-left">
       <h1 class="text-white">{{ title }}</h1>
     </div>
-    <div class="col-12 col-md-auto">
+    <div class="col-12 col-lg-auto">
       <ng-content></ng-content>
     </div>
   </div>
