--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="text-center mt-5">
-  <button (click)="login()" class="btn btn-primary btn-lg">facebook login</button>
+  <button *ngIf="!isLoggedIn" (click)="login()" class="btn btn-primary btn-lg mt-5">facebook login</button>
+  <button *ngIf="isLoggedIn" routerLink="/app" class="btn btn-outline-primary btn-lg mt-5">enter</button>
+  <div class="mt-3 text-muted">The app is in beta version.<br>Ask for permission before registration.</div>
 </div>
