--- a/src/app/pages/team-edit/members-list/members-list.component.html
+++ b/src/app/pages/team-edit/members-list/members-list.component.html
@@ -9,7 +9,8 @@
         </div>
         <div class="col-12 col-sm-3 mb-4">
           <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary btn-block">
-            {{ isLoading ? 'loading...' : 'Send invite' }}
+            <ng-container *ngIf="isLoading"><i class="fas fa-spinner anim"></i></ng-container>
+            <ng-container *ngIf="!isLoading">Invite</ng-container>
           </button>
         </div>
       </div>
