--- a/src/app/theme/_team.scss
+++ b/src/app/theme/_team.scss
@@ -287,6 +287,7 @@ $scorble-row-height-head: 140px;
   .nu-type-edit__input {
     width: 50px;
     text-align: center;
+    transition: all .2s;
   }
 
   .nu-type-edit__button {
@@ -300,6 +301,25 @@ $scorble-row-height-head: 140px;
       font-size: 9px;
 
       i { padding: 0; }
+    }
+  }
+
+  .nu-type-edit__spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 0;
+    transition: all .2s;
+  }
+
+  &.is-loading {
+    .nu-type-edit__inputs {
+      opacity: .1;    
+    }    
+
+    .nu-type-edit__spinner {
+      opacity: 1;
     }
   }
 }
