--- a/src/app/theme/_teams.scss
+++ b/src/app/theme/_teams.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;    
   padding: 20px;
-  transition: all .2s;
+  transition: all .15s;
   cursor: pointer;
   overflow: hidden;
   text-align: center;
@@ -46,5 +46,9 @@
   &:hover {
     transform: translateY(-10px);
     box-shadow: 0 .5rem 80px rgba($gray-900, .1);
+  }
+
+  &:focus {
+    transform: scale(.97);
   }
 }
